--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ a {
 #services .price-info {
 	display: flex;
 	align-items: flex-start;
-	margin-bottom: 15px; /* Adjust as needed */
+	margin-bottom: 15px;
   }
   
   
@@ -397,14 +397,14 @@ a {
 	font-size: 1.7rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
+	margin-bottom: 20px; 
   }
 
   #services .pricing h2 span {
 	font-size: 2rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
+	margin-bottom: 20px; 
 	color: darkred;
   }
   
@@ -412,15 +412,15 @@ a {
 	font-size: 1.7rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
-	margin-left: 20px; /* Add some space between the days and hours */
+	margin-bottom: 20px;
+	margin-left: 20px; 
   }
 
   #services .pricing h3 span {
 	font-size: 2rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
+	margin-bottom: 20px; 
 	color: darkred;
   }
 
@@ -428,15 +428,15 @@ a {
 	font-size: 1.7rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
-	margin-left: 20px; /* Add some space between the days and hours */
+	margin-bottom: 20px; 
+	margin-left: 20px;
   }
 
   #services .pricing h4 span {
 	font-size: 2rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
+	margin-bottom: 20px; 
 	color: darkred;
   }
 
@@ -444,15 +444,15 @@ a {
 	font-size: 1.7rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
-	margin-left: 20px; /* Add some space between the days and hours */
+	margin-bottom: 20px; 
+	margin-left: 20px; 
   }
 
   #services .pricing h5 span {
 	font-size: 2rem;
 	line-height: 3rem;
 	font-weight: 500;
-	margin-bottom: 20px; /* Adjust as needed */
+	margin-bottom: 20px; 
 	color: darkred;
   }
 
@@ -582,7 +582,7 @@ a {
   #location .timing-info {
 	display: flex;
 	align-items: flex-start;
-	margin-bottom: 15px; /* Adjust as needed */
+	margin-bottom: 15px; 
   }
   
   
@@ -601,27 +601,27 @@ a {
 	font-size: 1.7rem;
 	line-height: 2.5rem;
 	font-weight: 500;
-	margin-bottom: 10px; /* Adjust as needed */
+	margin-bottom: 10px; 
   }
   
   #location .timing h3 {
 	font-size: 1.7rem;
 	line-height: 2.5rem;
 	font-weight: 500;
-	margin-bottom: 10px; /* Adjust as needed */
-	margin-left: 20px; /* Add some space between the days and hours */
+	margin-bottom: 10px;/
+	margin-left: 20px;
   }
   
 #location .location-items-map {
   display: flex;
-  flex-wrap: wrap; /* Allow items to wrap to the next line if there is not enough space */
-  justify-content: space-between; /* Distribute items evenly along the container */
-  margin-top: 20px; /* Add some space between the items */
+  flex-wrap: wrap; 
+  justify-content: space-between;
+  margin-top: 20px; 
   margin-right: 100px;
 }
 
 #location .location-item {
-  width: 48%; /* Adjust the width to leave some space for margins and spacing between items */
+  width: 48%; 
   padding: 20px;
   text-align: center;
   border-radius: 10px;
@@ -653,7 +653,7 @@ a {
 }
 
 #location .map {
-  width: 48%; /* Adjust the width to leave some space for margins and spacing between items */
+  width: 48%; 
 }
 /* End Location Section */
 
